--- a/package.json
+++ b/package.json
@@ -2,24 +2,19 @@
   "name": "api-js-node",
   "version": "1.0.0",
   "description": "Node client for Usabilla public API",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "dependencies": {
-    "moment": "^2.13.0"
+    "lodash.assign": "^4.0.9",
+    "moment": "^2.13.0",
+    "request": "^2.72.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.0.1",
     "gulp": "^3.9.1",
-    "gulp-load-plugins": "^1.2.4",
-    "gulp-util": "^3.0.7",
-    "lodash.assign": "^4.0.9",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "gulp-babel": "^6.1.2"
   },
   "scripts": {
-    "start": "gulp scripts",
+    "start": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
