--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "usabilla-api",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha",
   "description": "Node client for Usabilla public API",
   "main": "./dist/index.js",
   "dependencies": {
+    "crypto": "0.0.3",
+    "https": "^1.0.0",
     "lodash.assign": "^4.0.9",
-    "moment": "^2.13.0",
-    "request": "^2.72.0"
+    "moment": "^2.13.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
