--- a/package.json
+++ b/package.json
@@ -4,21 +4,31 @@
   "description": "Node client for Usabilla public API",
   "main": "./dist/index.js",
   "dependencies": {
-    "crypto": "0.0.3",
-    "https": "^1.0.0",
     "lodash.assign": "^4.0.9",
     "moment": "^2.13.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
+    "browserify-istanbul": "^2.0.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2"
+    "gulp-babel": "^6.1.2",
+    "isparta": "^4.0.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.1.2",
+    "karma-browserify": "^5.1.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
+    "karma-jasmine": "^1.0.2",
+    "watchify": "^3.7.0"
   },
   "scripts": {
     "start": "gulp",
     "build": "gulp babel",
     "prepublish": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
