--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "isparta": "^4.0.0",
+    "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-browserify": "^5.1.0",
