--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "start": "gulp",
     "build": "gulp babel",
     "prepublish": "npm run build",
-    "test": "karma start karma.conf.js"
+    "test": "karma start karma.conf.js --single-run",
+    "test:watch": "karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
