--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "browserify": "^13.1.0",
     "browserify-istanbul": "^2.0.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
     "isparta": "^4.0.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
@@ -21,11 +20,12 @@
     "karma-coverage": "^1.1.1",
     "karma-coveralls": "^1.1.2",
     "karma-jasmine": "^1.0.2",
+    "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   },
   "scripts": {
     "start": "gulp",
-    "build": "gulp babel",
+    "build": "gulp build",
     "prepublish": "npm run build",
     "test": "karma start karma.conf.js"
   },
