--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0-beta.1",
   "description": "Node client for Usabilla public API",
   "main": "./dist/index.js",
-  "dependencies": {
-    "moment": "^2.15.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-preset-es2015": "^6.14.0",
     "babelify": "^7.3.0",
