--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
+    "browserify": "^13.1.1",
     "browserify-istanbul": "^2.0.0",
     "gulp": "^3.9.1",
     "isparta": "^4.0.0",
@@ -21,8 +21,8 @@
     "karma-coverage": "^1.1.1",
     "karma-coveralls": "^1.1.2",
     "karma-jasmine": "^1.0.2",
-    "wallabify": "0.0.14",
     "vinyl-source-stream": "^1.1.0",
+    "wallabify": "0.0.14",
     "watchify": "^3.7.0"
   },
   "scripts": {
@@ -30,7 +30,10 @@
     "build": "gulp build",
     "prepublish": "npm run build",
     "test": "karma start karma.conf.js --single-run",
-    "test:watch": "karma start karma.conf.js"
+    "test:watch": "karma start karma.conf.js",
+    "lint": "eslint ./src ./test ./example/example.js",
+    "lint:fix": "npm run lint -- --fix",
+    "posttest": "npm run lint"
   },
   "repository": {
     "type": "git",
