--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "browserify-istanbul": "^2.0.0",
+    "eslint": "^3.12.2",
     "gulp": "^3.9.1",
     "isparta": "^4.0.0",
     "jasmine": "^2.5.2",
