--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "karma-coveralls": "^1.1.2",
     "karma-jasmine": "^1.0.2",
     "lint-staged": "^4.2.3",
-    "prettier": "^1.7.4",
+    "prettier-eslint-cli": "^4.4.0",
     "semantic-release": "^6.3.2",
     "vinyl-source-stream": "^1.1.0",
     "wallabify": "0.0.14",
@@ -43,7 +43,8 @@
     "posttest": "npm run lint",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "commit": "git-cz",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "format": "prettier-eslint --write --single-quote"
   },
   "repository": {
     "type": "git",
@@ -62,7 +63,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "prettier --write",
+      "format",
       "git add"
     ]
   }
