ci(circle): Consider releasing as part of deployment
To avoid the need for using a bash if statement, the branch name is now
part of the deployment configuration.

--- a/circle.yml
+++ b/circle.yml
@@ -9,5 +9,9 @@ dependencies:
 test:
   override:
     - yarn test
-  post:
-    - if [ $CIRCLE_BRANCH = 'master' ]; then yarn semantic-release; fi
+
+deployment:
+  release:
+    branch: master
+    commands:
+      - DEBUG=condition yarn semantic-release || true
