--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,12 @@
 {
-  "extend": "eslint:recommended",
-  "parserOptions": {
-    "ecmaVersion": 6
-  },
+  "extends": ["eslint:recommended", "plugin:jest/recommended"],
   "env": {
-    "node": true
+    "node": true,
+    "es6": true
   },
   "rules": {
     "quotes": ["error", "single"],
-    "indent": ["error", 2, {"SwitchCase": 1}],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "space-before-function-paren": ["error", "never"]
   }
 }
