--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "condition-circle": "^2.0.1",
     "coveralls": "^3.0.1",
     "cz-conventional-changelog": "^2.0.0",
-    "eslint": "^3.12.2",
+    "eslint": "4.19.1",
+    "eslint-plugin-jest": "^21.17.0",
     "husky": "^0.14.3",
     "jest": "^23.0.1",
-    "lint-staged": "^4.2.3",
+    "lint-staged": "7.1.3",
     "prettier-eslint-cli": "^4.4.0",
-    "semantic-release": "^11.0.2",
+    "semantic-release": "15.5.0",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.4"
+    "webpack-cli": "3.0.1"
   },
   "scripts": {
     "start": "webpack -w --mode development",
