--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -10,10 +10,16 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.experimental }}
 
     strategy:
+      fail-fast: true
       matrix:
-        node-version: [8.x, 14.x, 16.x]
+        node-version: [16, 18]
+        experimental: [ false ]
+        include:
+          - node-version: 19
+            experimental: true
 
     steps:
       - uses: actions/checkout@v3
