--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "axios": "^0.21.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
     "commitizen": "^2.9.6",
     "coveralls": "^3.0.1",
     "cz-conventional-changelog": "^2.0.0",
@@ -21,8 +21,8 @@
     "lint-staged": "7.1.3",
     "prettier-eslint-cli": "^4.4.0",
     "semantic-release": "15.5.0",
-    "webpack": "^4.8.3",
-    "webpack-cli": "3.0.1"
+    "webpack": "5",
+    "webpack-cli": "5"
   },
   "scripts": {
     "start": "webpack -w --mode development",
