--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        node-version: [16, 18]
+        node-version: [18]
         experimental: [ false ]
         include:
           - node-version: 19
