--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "commitizen": "^4.3.0",
     "coveralls": "^3.0.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "4.19.1",
-    "eslint-plugin-jest": "^21.17.0",
+    "eslint": "^8",
+    "eslint-plugin-jest": "^27",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
-    "lint-staged": "13.2.0",
+    "lint-staged": "^13.2.0",
     "prettier-eslint-cli": "^7.1.0",
-    "semantic-release": "15.5.0",
-    "webpack": "5",
-    "webpack-cli": "5"
+    "semantic-release": "^15.5.0",
+    "webpack": "^5",
+    "webpack-cli": "^5"
   },
   "scripts": {
     "start": "webpack -w --mode development",
