Update eve merge config to use rebase
We need to be explicit about the merge method.

--- a/.config/eve.yaml
+++ b/.config/eve.yaml
@@ -6,5 +6,6 @@ plugins:
     enabled: true
   merge-dependabot-prs:
     enabled: true
+    mergeMethod: rebase
     dependencies:
       all: major
