--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -35,6 +35,6 @@ updates:
       interval: "daily"
     labels:
       - "ci"
-      - "dependencies"
+      - "Dependencies"
     reviewers:
       - "rdohms"
