--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -15,10 +15,10 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        node-version: [18]
+        node-version: [18, 20]
         experimental: [ false ]
         include:
-          - node-version: 19
+          - node-version: 21
             experimental: true
 
     steps:
