--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,9 +15,11 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
+          node-version: '20.x'
       - name: Install dependencies
         run: yarn install
+      - name: Install Semantic Release Package
+        run: yarn add semantic-release
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_RELEASE_TOKEN }}
